<resources>
    <string name="app_name">BellApp</string>

    <!-- Drawer default strings -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- WELCOME ACTIVITY -->

    <string name="skip_button">SKIP</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREVIOUS</string>

    <!-- Fragment 1 -->
    <string name="title_1">Manage All Your Bell Systems in One App</string>
    <string name="descriprion_1">
        With our app, you can manage all your bell systems from one place.
        Control everything remotely or directly connected to the system, as long as you have an internet connection.
    </string>

    <!-- Fragment 2 -->
    <string name="title_2">Complete Freedom with Calendar View</string>
    <string name="description_2">
        Enjoy full control with the calendar view.
        Schedule and manage events for your bell systems day by day, ensuring everything runs smoothly.
    </string>

    <!-- Fragment 3 -->
    <string name="title_3">Customize Your Own Melody</string>
    <string name="description_3">
        Create a unique melody directly within the app!
        With our melody creation feature, you have full control to compose and personalize the sounds that accompany your events.
        Whether it\'s a simple tune or a more complex melody, the choice is yours.
    </string>

    <!-- MAIN ACTIVITY -->

    <!-- Navigation drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_add_sys">Add System</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>

    <!-- Home fragment -->
    <string name="first_message_home">
        Don\'t panic, to start controlling your bell systems just
        click in the top menu and add one from the \"Add Sys\" page. \n
        You just need to know the system ID and its PIN.
    </string>
    <string name="calendar">Calendar</string>
    <string name="play">My melodies</string>
    <string name="name_changed">Name successfully changed!</string>
    <string name="empty_name">Name cannot be empty, please try again</string>
    <string name="sys_removed">System successfully removed!</string>

    <!-- Add Sys fragment -->
    <string name="insert_sys_id">Insert system id:</string>
    <string name="search">Search</string>
    <string name="found">Found:</string>
    <string name="location">Location:</string>
    <string name="melodies_number">Number of melodies:</string>
    <string name="bells_number">Number of bells:</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="insert_pin">Insert pin:</string>
    <string name="add_sys">Add system</string>
    <string name="none">None</string>
    <string name="already_linked">System already linked</string>
    <string name="successfully_add_sys">System added successfully</string>

    <!-- Settings fragment -->
    <string name="mail_fede">fedegarau02@gmail.com</string>
    <string name="mail_nicco">nicolotrebino@gmail.com</string>
    <string name="set_reminder">Set a reminder</string>
    <string name="reminder_title">Daily reminder</string>
    <string name="reminder_text">Remember to set some events</string>
    <string name="image_update_toast">Profile image updated successfully</string>
    <string name="image_uploading">Profile image uploading</string>
    <string name="image_remove_toast">Image removed successfully</string>
    <string name="notification_denied">Please enable notifications in settings</string>
    <string name="events_notification">Events notification</string>
    <string name="event_notification_toast">Events notification enabled</string>

    <!-- CALENDAR ACTIVITY -->

    <!-- Month View fragment -->
    <string name="delete_confirmation_event">Delete event</string>
    <string name="delete_event_message">Are you sure you want to delete this old event?</string>

    <!-- Add Event fragment -->
    <string name="add_time">Time</string>
    <string name="add_date">Date</string>
    <string name="select_melody">Select a melody</string>
    <string name="select_color">Select a color</string>
    <string name="save_event">SAVE</string>
    <string name="delete_event">DELETE</string>
    <string name="add_event">Add Event</string>
    <string name="modify_event">Modify Event</string>
    <string name="saved">Successfully  saved</string>
    <string name="incorrect_saved">Please provide all the information</string>
    <string name="deleted">Successfully  deleted</string>
    <string name="event_created">Event successfully created!</string>
    <string name="event_updated">Event successfully updated!</string>
    <string name="event_already_happened">This event already happened!</string>

    <!-- MELODY ACTIVITY -->

    <!-- Personal Melodies fragment -->
    <string name="noMelodies">
        You don\'t have any personal melodies yet.
        Press the button below and try to create one from scratch
    </string>
    <string name="melody_deleted">Melody deleted successfully</string>
    <string name="sync_message_1">Melody NOT yet synchronized. \n Push the physical button in the system</string>
    <string name="sync_message_2">Default SYNC</string>
    <string name="not_sync">NOT SYNC</string>
    <string name="sync">SYNC</string>

    <!-- Create Melody fragment -->
    <string name="melody_created">Melody created and saved successfully</string>

    <!-- ALERT DIALOGS -->

    <!-- Remove sys (HomeListAdapter) -->
    <string name="remove_sys">Do you want to remove this system?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Change sys name (HomeListAdapter) -->
    <string name="change_name">Enter a name for your system</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Change profile image (Home fragment)-->
    <string name="change_image">Are you sure you want to change your profile image?</string>

    <!-- Main information dialog (Home fragment) -->
    <string name="informations">Informations</string>

    <!-- Delete melody dialog (Personal Melodies fragment) -->
    <string name="delete_melody_message_1">Are you sure you want to delete the melody "%1$s"?</string>
    <string name="delete_melody_message_2">
        Are you sure you want to delete the melody "%1$s"? \n
        If you click "yes" remember that, \n
        for the correct functioning of the next scheduled events and all future melody performances, \n
        it is mandatory to perform a synchronization via the physical button of the system.
    </string>
    <string name="delete_confirmation">Delete melody</string>

    <!-- GENERAL MESSAGES -->

    <!-- Warning and Error messages -->
    <string name="sww_try_again">Something went wrong, please try again</string>
    <string name="sww_connection">Something went wrong. Please check your connection</string>
    <string name="connection_warning">Please remember to activate your internet connection while using the application</string>
    <string name="connection_warning_1">Check your internet connection before creating or updating your events</string>
    <string name="connection_warning_2">Check your internet connection before trying to link a system</string>
    <string name="connection_warning_3">Check your internet connection before trying to save a new melody</string>
    <string name="portrait_orientation">For a better experience, please use portrait mode</string>

    <!-- General Toast -->
    <string name="back_before_exit_toast">Press back again to exit from the application</string>
    <string name="coming_soon">COMING SOON!</string>
</resources>