<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.fnorg.bellapp.main_activity.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/main_fragment_home" />

    <fragment
        android:id="@+id/nav_add_sys"
        android:name="it.fnorg.bellapp.main_activity.addsys.AddSysFragment"
        android:label="@string/menu_add_sys"
        tools:layout="@layout/main_fragment_add_sys" >
        <action
            android:id="@+id/action_nav_add_sys_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="it.fnorg.bellapp.main_activity.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/main_fragment_settings" />
</navigation>